py2o2/src/snapshots/py2o2__parser__test__parse_arg-2.snap
---
source: py2o2/src/parser.rs
expression: "arg(\"a: T\").finish().unwrap()"
---
(
    "",
    Arg {
        name: "a",
        ty: Some(
            Name(
                "T",
            ),
        ),
        default: None,
    },
)
