py2o2/src/snapshots/py2o2__parser__test__parse_arg-3.snap
---
source: py2o2/src/parser.rs
expression: "arg(\"a: T = None\").finish().unwrap()"
---
(
    "",
    Arg {
        name: "a",
        ty: Some(
            Name(
                "T",
            ),
        ),
        default: Some(
            None,
        ),
    },
)
