py2o2/src/snapshots/py2o2__parser__test__parse_arg-4.snap
---
source: py2o2/src/parser.rs
expression: "arg(\"a = None\").finish().unwrap()"
---
(
    "",
    Arg {
        name: "a",
        ty: None,
        default: Some(
            None,
        ),
    },
)
