py2o2/src/snapshots/py2o2__parser__test__parse_function_def-2.snap
---
source: py2o2/src/parser.rs
expression: "function_def(r#\"\n            def g(x: int) -> str:\n                ...\n            \"#.trim()).finish().unwrap()"
---
(
    "",
    FunctionDef {
        name: "g",
        args: [
            Arg {
                name: "x",
                ty: Some(
                    Name(
                        "int",
                    ),
                ),
                default: None,
            },
        ],
        type_: Name(
            "str",
        ),
    },
)
