py2o2/src/snapshots/py2o2__parser__test__parse_function_def.snap
---
source: py2o2/src/parser.rs
expression: "function_def(r#\"\n            def f(a, b):\n                ...\n            \"#.trim()).finish().unwrap()"
---
(
    "",
    FunctionDef {
        name: "f",
        args: [
            Arg {
                name: "a",
                ty: None,
                default: None,
            },
            Arg {
                name: "b",
                ty: None,
                default: None,
            },
        ],
        type_: None,
    },
)
