py2o2/src/snapshots/py2o2__parser__test__parse_import-2.snap
---
source: py2o2/src/parser.rs
expression: "import_from(\"from numpy import array\").finish().unwrap()"
---
(
    "",
    ImportFrom {
        module: Path {
            components: [
                "numpy",
            ],
        },
        names: [
            Alias {
                name: Path {
                    components: [
                        "array",
                    ],
                },
                asname: None,
            },
        ],
    },
)
