py2o2/src/snapshots/py2o2__parser__test__parse_import.snap
---
source: py2o2/src/parser.rs
expression: "import(\"import numpy, pandas\").finish().unwrap()"
---
(
    "",
    Import {
        names: [
            Alias {
                name: Path {
                    components: [
                        "numpy",
                    ],
                },
                asname: None,
            },
            Alias {
                name: Path {
                    components: [
                        "pandas",
                    ],
                },
                asname: None,
            },
        ],
    },
)
